--- a/download.ipynb
+++ b/download.ipynb
@@ -57,6 +57,74 @@
     "\n",
     "print(\"✅ Dataset has been reorganized to ImageFolder format.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d1ddd00",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import zipfile\n",
+    "import urllib.request\n",
+    "\n",
+    "# Thư mục đích\n",
+    "save_path = \"/content/my_data\"\n",
+    "os.makedirs(save_path, exist_ok=True)\n",
+    "\n",
+    "# Tải Tiny ImageNet\n",
+    "url = \"http://cs231n.stanford.edu/tiny-imagenet-200.zip\"\n",
+    "zip_path = os.path.join(save_path, \"tiny-imagenet-200.zip\")\n",
+    "\n",
+    "print(\"📥 Đang tải Tiny ImageNet...\")\n",
+    "urllib.request.urlretrieve(url, zip_path)\n",
+    "\n",
+    "print(\"📦 Đang giải nén...\")\n",
+    "with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
+    "    zip_ref.extractall(save_path)\n",
+    "\n",
+    "print(\"✅ Tải và giải nén xong.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6dcb4de",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import shutil\n",
+    "\n",
+    "val_dir = os.path.join(save_path, \"tiny-imagenet-200\", \"val\")\n",
+    "img_dir = os.path.join(val_dir, \"images\")\n",
+    "anno_file = os.path.join(val_dir, \"val_annotations.txt\")\n",
+    "\n",
+    "# Đọc nhãn từng ảnh\n",
+    "with open(anno_file, \"r\") as f:\n",
+    "    lines = f.readlines()\n",
+    "    mapping = {line.split(\"\\t\")[0]: line.split(\"\\t\")[1] for line in lines}\n",
+    "\n",
+    "# Tạo thư mục class và di chuyển ảnh\n",
+    "for img_name, class_name in mapping.items():\n",
+    "    class_dir = os.path.join(val_dir, class_name)\n",
+    "    os.makedirs(class_dir, exist_ok=True)\n",
+    "    shutil.move(os.path.join(img_dir, img_name), os.path.join(class_dir, img_name))\n",
+    "\n",
+    "# Xóa folder không cần thiết\n",
+    "shutil.rmtree(img_dir)\n",
+    "os.remove(anno_file)\n",
+    "\n",
+    "print(\"✅ Đã tổ chức lại thư mục val đúng định dạng ImageFolder.\")\n"
+   ]
   }
  ],
  "metadata": {
