--- a/download.ipynb
+++ b/download.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "af769b44",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -62,11 +58,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5d1ddd00",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -95,11 +87,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d6dcb4de",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import shutil\n",
@@ -125,11 +113,135 @@
     "\n",
     "print(\"✅ Đã tổ chức lại thư mục val đúng định dạng ImageFolder.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b83bdefd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0', '1']\n",
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "args = {\n",
+    "    \"device\": [\"0\",\"1\"]\n",
+    "}\n",
+    "device_type = args[\"device\"]\n",
+    "gpus = []\n",
+    "print(device_type)\n",
+    "for device in device_type:\n",
+    "    print(device)\n",
+    "    if device_type == -1:\n",
+    "        device = torch.device(\"cpu\")\n",
+    "    else:\n",
+    "        device = torch.device(\"cuda:{}\".format(device))\n",
+    "\n",
+    "    gpus.append(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "577e0d5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[device(type='cuda', index=6)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(gpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2bc9ea3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[5.5, 2. ]]),\n",
+       " array([1.]),\n",
+       " array([[[ 2.02500010e+01, -9.25185854e-17],\n",
+       "         [-9.25185854e-17,  2.66666767e+00]]]))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.mixture import GaussianMixture\n",
+    "X = np.array([[1, 2], [1, 4], [1, 0], [10, 2], [10, 4], [10, 0]])\n",
+    "gm = GaussianMixture(n_components=1, random_state=0).fit(X)\n",
+    "gm.means_,gm.weights_,gm.covariances_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e475e134",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.02500010e+01, -9.25185854e-17],\n",
+       "       [-9.25185854e-17,  2.66666767e+00]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gm.covariances_[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c38a36c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "AI_HCM",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
